# libgde2kbd

./: AUTHORS  Makefile.am  README  autogen.sh  configure.ac  libgde2kbd.pc.in  libgde2kbdui.pc.in
.tx/: config
libgde2kbd/: Makefile.am  gde2kbd-config-private.h  gde2kbd-desktop-config.c  gde2kbd-desktop-config.h  gde2kbd-indicator-config.c  gde2kbd-indicator-config.h  gde2kbd-indicator.c  gde2kbd-indicator.h  gde2kbd-keyboard-config.c  gde2kbd-keyboard-config.h  gde2kbd-keyboard-drawing.c  gde2kbd-keyboard-drawing.h  gde2kbd-status.c  gde2kbd-status.h  gde2kbd-util.c  gde2kbd-util.h  org.gde2.peripherals-keyboard-xkb.gschema.xml.in
po/: ChangeLog  POTFILES.in  POTFILES.skip  af.po  am.po  an.po  ar.po  as.po  ast.po  az.po  be.po  bg.po  bn.po  bn_IN.po  br.po  bs.po  ca.po  ca@valencia.po  cmn.po  crh.po  cs.po  csb.po  cv.po  cy.po  da.po  de.po  de_CH.po  dz.po  el.po  en_AU.po  en_CA.po  en_GB.po  eo.po  es.po  es_419.po  es_AR.po  es_CL.po  es_CO.po  es_CR.po  es_DO.po  (+117 more)
test/: Makefile.am  gde2kbd-indicator-test.c  gde2kbd-keyboard-drawing-test.c  gde2kbd-status-test.c
